endpoints refactored